Fix alignment in playground menu

--- a/client/styles/breakout/components/breakout_controller_button.scss
+++ b/client/styles/breakout/components/breakout_controller_button.scss
@@ -8,6 +8,7 @@
   @include mixins.button-floating;
 
   bottom: 1em;
+  z-index: var(--body-zindex-ff);
 
   @container page-scroll-container (max-width: #{sizes.$main-size-min-width}) {
     &-compact {
