--- a/client/styles/breakout/index.scss
+++ b/client/styles/breakout/index.scss
@@ -33,9 +33,3 @@
   --breakout-opacity-splash:  0.25;
   --breakout-opacity-ray:     0.5;
 }
-
-.breakout-menu {
-  &-debug {
-    padding-block: var(--button-size-vpadding);
-  }
-}
